# growatt2mqtt

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  growatt.py  growatt2mqtt.cfg  growatt2mqtt.cfg.example  growatt2mqtt.py  growatt2mqtt.service  growatt2mqtt_old.cfg  growatt2mqtt_old.py  growatt_TL3X_MAX_MID_MAC_MIC_input_reg.py  growatt_old.py  master_growatt2mqtt.cfg  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docker-publish.yml
register_maps/: growatt_MAX_holding.py  growatt_MAX_input_reg.py  growatt_MOD_TL3_XH_holding.py  growatt_MOD_TL3_XH_input.py  growatt_TL3X_MAX_MID_MAC_MIC_input_reg.py  growatt_TL3X_holding.py  growatt_TLXH_input_reg.py  growatt_TLXH_min_holding.py  growatt_TLXH_min_input.py  growatt_meter_input.py  growatt_storage_mix_holding.py  growatt_storage_mix_input.py  growatt_storage_spa_holding.py  growatt_storage_spa_input.py  growatt_storage_sph_holding.py  growatt_storage_sph_input.py
src/growatt_2_mqtt/: discovery.py  growatt.py  main.py
src/growatt_2_mqtt/register_maps/: growatt_MOD_TL3_XH_holding.py  growatt_TLXH_min_holding.py  growatt_modbus_inverters.txt  growatt_storage_mix_holding.py  growatt_storage_mix_input.py
src/tools/: growatt_simulator.py  start_socat.py
